--- a/src/slidingpuzzlegui.ui
+++ b/src/slidingpuzzlegui.ui
@@ -7,13 +7,39 @@
     <x>0</x>
     <y>0</y>
     <width>800</width>
-    <height>600</height>
+    <height>800</height>
    </rect>
   </property>
-  <property name="windowTitle">
-   <string>MainWindow</string>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
+  <property name="windowTitle">
+   <string>Sliding puzzle by Mateusz Bryła</string>
+  </property>
+  <widget class="QWidget" name="centralwidget">
+   <widget class="ClickableLabel" name="image">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>800</width>
+      <height>800</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
+  </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
@@ -41,15 +67,18 @@
     <addaction name="action6x6"/>
     <addaction name="action7x7"/>
     <addaction name="action8x8"/>
+    <addaction name="action9x9"/>
    </widget>
-   <widget class="QMenu" name="menuAbout">
+   <widget class="QMenu" name="menuInfo">
     <property name="title">
-     <string>About</string>
+     <string>Info</string>
     </property>
+    <addaction name="actionAbout"/>
+    <addaction name="actionLicenses"/>
    </widget>
    <addaction name="menuGame"/>
    <addaction name="menuDifficulty"/>
-   <addaction name="menuAbout"/>
+   <addaction name="menuInfo"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="actionSelectImage">
@@ -68,36 +97,82 @@
    </property>
   </action>
   <action name="action3x3">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>3x3</string>
    </property>
   </action>
   <action name="action4x4">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>4x4</string>
    </property>
   </action>
   <action name="action5x5">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>5x5</string>
    </property>
   </action>
   <action name="action6x6">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>6x6</string>
    </property>
   </action>
   <action name="action7x7">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>7x7</string>
    </property>
   </action>
   <action name="action8x8">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
    <property name="text">
     <string>8x8</string>
    </property>
   </action>
+  <action name="action9x9">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>9x9</string>
+   </property>
+  </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
+   </property>
+  </action>
+  <action name="actionLicenses">
+   <property name="text">
+    <string>Licenses</string>
+   </property>
+  </action>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>ClickableLabel</class>
+   <extends>QLabel</extends>
+   <header location="global">clickablelabel.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
